@@ -79,7 +79,7 @@ fi
 %{_libdir}/*.la
 
 %changelog
-* Fri Apr 10 2015 - dgilbert at interlog dot com
+* Tue Apr 28 2015 - dgilbert at interlog dot com
 - track t10 changes
   * sg3_utils-1.41
 
