@@ -41,7 +41,7 @@
 #include "sg_cmds_basic.h"
 #include "sg_pt.h"
 
-static const char * version_str = "1.46 20150407";    /* SPC-5 rev 02 */
+static const char * version_str = "1.47 20150421";    /* SPC-5 rev 02 */
 
 /* INQUIRY notes:
  * It is recommended that the initial allocation length given to a
@@ -2358,8 +2358,7 @@ decode_b0_vpd(unsigned char * buff, int len, int do_hex)
             if (len > 19) {     /* added in sbc3r09 */
                 u = (buff[16] << 24) | (buff[17] << 16) | (buff[18] << 8) |
                     buff[19];
-                printf("  Maximum prefetch, xdread, xdwrite transfer length: "
-                       "%u blocks\n", u);
+                printf("  Maximum prefetch transfer length: %u blocks\n", u);
             }
             if (len > 27) {     /* added in sbc3r18 */
                 u = ((unsigned int)buff[20] << 24) | (buff[21] << 16) |
