@@ -2,7 +2,7 @@ sg3-utils (1.41-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 10 Apr 2015 14:00:00 +0200
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 28 Apr 2015 11:00:00 -0400
 
 sg3-utils (1.40-0.1) unstable; urgency=low
 
